fix: update background color of login section for improved visibility

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -65,7 +65,7 @@
 .login {
   overflow: hidden;
   width: 100%;
-  background-color: #ccddef;
+  background-color: #4b95e5;
   height: 100dvh;
 }
 .wrapper {
